Fixed bug on navbar collapsing behavior.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -91,6 +91,7 @@ header h3 {
 }
 
 .navbar {
+  min-height: auto; // Enable grow of the heigth if content colapse
   margin-bottom: 0;
   border-radius: 0;
 }
@@ -425,46 +426,4 @@ button {
   .color-#{nth($colorn,$i)} {
     color: nth($colorv,$i);
   }
-}
-
-
-
-/* Temporal fix for problem with flexbox
-and navbar. The fix is applied collapsing
-the menu from 860px */
-@media (max-width: 860px) {
-    .navbar-header {
-        float: none;
-    }
-    .navbar-left,.navbar-right {
-        float: none !important;
-    }
-    .navbar-toggle {
-        display: block;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-fixed-top {
-        top: 0;
-        border-width: 0 0 1px;
-    }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
-    .navbar-nav {
-        float: none!important;
-        margin-top: 7.5px;
-    }
-    .navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    .collapse.in{
-        display:block !important;
-    }
 }
